opam-version: "1.2"
version: "v0.10.0"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/core_extended"
bug-reports: "https://github.com/janestreet/core_extended/issues"
dev-repo: "git+https://github.com/janestreet/core_extended.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "bin_prot"                {>= "v0.10" & < "v0.11"}
  "core"                    {>= "v0.10" & < "v0.11"}
  "core_kernel"             {>= "v0.10" & < "v0.11"}
  "fieldslib"               {>= "v0.10" & < "v0.11"}
  "ppx_driver"              {>= "v0.10" & < "v0.11"}
  "ppx_jane"                {>= "v0.10" & < "v0.11"}
  "re2"                     {>= "v0.10" & < "v0.11"}
  "sexplib"                 {>= "v0.10" & < "v0.11"}
  "textutils"               {>= "v0.10" & < "v0.11"}
  "base-threads"
  "jbuilder"                {build & >= "1.0+beta12"}
  "ocaml-migrate-parsetree" {>= "0.4"}
  "re"                      {>= "1.5.0"}
]
available: [ ocaml-version >= "4.04.1" ]
descr: "
Extra components that are not as closely vetted or as stable as Core

The Core suite of libraries is an industrial strength alternative to
OCaml's standard library that was developed by Jane Street, the
largest industrial user of OCaml.
"
