opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/core_extended"
bug-reports: "https://github.com/janestreet/core_extended/issues"
dev-repo: "git+https://github.com/janestreet/core_extended.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "bin_prot"
  "core"
  "core_kernel"
  "fieldslib"
  "ppx_jane"
  "re2"
  "sexplib"
  "textutils"
  "base-threads"
  "jbuilder"                {build & >= "1.0+beta18.1"}
  "ocaml-migrate-parsetree" {>= "1.0"}
  "ppxlib"                  {>= "0.1.0"}
  "re"                      {>= "1.5.0"}
]
available: [ ocaml-version >= "4.06.1" ]
descr: "
Extra components that are not as closely vetted or as stable as Core

The Core suite of libraries is an industrial strength alternative to
OCaml's standard library that was developed by Jane Street, the
largest industrial user of OCaml.
"
