opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/core_extended"
bug-reports: "https://github.com/janestreet/core_extended/issues"
dev-repo: "git+https://github.com/janestreet/core_extended.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/core_extended/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "bin_prot"
  "core"
  "core_unix"
  "ppx_jane"
  "ppx_stable_witness"
  "record_builder"
  "sexplib"
  "dune"               {>= "3.17.0"}
  "re"                 {= "1.14.0+ox"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Extra components that are not as closely vetted or as stable as Core"
description: "
The Core suite of libraries is an industrial strength alternative to
OCaml's standard library that was developed by Jane Street, the
largest industrial user of OCaml.
"
